--- a/infra/cloudformaRESTAPI.yaml
+++ b/infra/cloudformaRESTAPI.yaml
@@ -54,41 +54,56 @@ Resources:
       UserPoolId: !Ref MyCognitoUserPool
       ClientName: "gondolfclient"
       GenerateSecret: false
-  MyHttpApi:
-    Type: AWS::ApiGatewayV2::Api
+  MyApiGateway:
+    Type: AWS::ApiGateway::RestApi
     Properties:
       Name: "gondolfapi"
-      ProtocolType: "HTTP"
-      Description: "description for HTTP API"
-      CorsConfiguration:
-        AllowOrigins:
-          - "*"
-        AllowMethods:
-          - "GET"
-          - "POST"
-          - "OPTIONS"
-          - "PUT"
-          - "PATCH"
-          - "DELETE"
-        AllowHeaders:
-          - "Content-Type"
-          - "X-Amz-Date"
-          - "Authorization"
-          - "X-Api-Key"
-        ExposeHeaders:
-          - "x-custom-header"
-        MaxAge: 3600
-
+      Description: "description2"
+      # Define resources, methods...
+  MyApiDeployment:
+    Type: AWS::ApiGateway::Deployment
+    DependsOn: MyApiGetMethod # Make sure to list all methods that need to be deployed
+    Properties:
+      RestApiId: !Ref MyApiGateway
+      Description: "Initial deployment"
+  MyApiGatewayStage:
+    Type: AWS::ApiGateway::Stage
+    Properties:
+      StageName: "dev"
+      Description: "Stage for development"
+      RestApiId: !Ref MyApiGateway
+      DeploymentId: !Ref MyApiDeployment # This should match the actual deployment resource ID
+  MyApiResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId: !GetAtt
+        - "MyApiGateway"
+        - "RootResourceId"
+      PathPart: "example" # Change to your desired path
+      RestApiId: !Ref "MyApiGateway"
+  MyApiGetMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      AuthorizationType: "COGNITO_USER_POOLS"
+      AuthorizerId: !Ref "MyCognitoAuthorizer"
+      HttpMethod: "GET"
+      ResourceId: !Ref "MyApiResource"
+      RestApiId: !Ref "MyApiGateway"
+      Integration:
+        IntegrationHttpMethod: "POST"
+        Type: "AWS_PROXY"
+        Uri: !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${MyLambdaFunction.Arn}/invocations"
   MyLambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: "lambdafunction"
-      Runtime: "nodejs20.x"
+      Runtime: "nodejs16.x"
       Role: !GetAtt [LambdaExecutionRole, Arn]
       Handler: "function1.handler"
       Code:
         S3Bucket: gondolf-lambda-bucket
         S3Key: function1.zip
+      # Environment, MemorySize, Timeout...
   LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -110,56 +125,19 @@ Resources:
                   - logs:CreateLogStream
                   - logs:PutLogEvents
                 Resource: arn:aws:logs:*:*:*
-  MyLambdaIntegration:
-    Type: AWS::ApiGatewayV2::Integration
-    Properties:
-      ApiId: !Ref MyHttpApi
-      IntegrationType: "AWS_PROXY"
-      IntegrationUri: !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${MyLambdaFunction.Arn}/invocations"
-      PayloadFormatVersion: "2.0"
-  MyRoute:
-    Type: AWS::ApiGatewayV2::Route
-    Properties:
-      ApiId: !Ref MyHttpApi
-      RouteKey: "GET /example"
-      AuthorizationType: "JWT"
-      AuthorizerId: !Ref MyCognitoAuthorizer
-      Target: !Join
-        - "/"
-        - - "integrations"
-          - !Ref MyLambdaIntegration
-  MyDeployment:
-    Type: AWS::ApiGatewayV2::Deployment
-    DependsOn:
-      - MyRoute
-      - MyLambdaPermission
-    Properties:
-      ApiId: !Ref MyHttpApi
-      Description: "Initial deployment"
-  MyStage:
-    Type: AWS::ApiGatewayV2::Stage
-    Properties:
-      ApiId: !Ref MyHttpApi
-      DeploymentId: !Ref MyDeployment
-      StageName: "dev"
-      AutoDeploy: true
-  MyCognitoAuthorizer:
-    Type: AWS::ApiGatewayV2::Authorizer
-    Properties:
-      ApiId: !Ref MyHttpApi
-      Name: "MyCognitoAuthorizer"
-      AuthorizerType: "JWT"
-      IdentitySource:
-        - "$request.header.Authorization"
-      JwtConfiguration:
-        Audience:
-          - !Ref MyCognitoUserPoolClient
-        Issuer: !Sub "https://cognito-idp.${AWS::Region}.amazonaws.com/${MyCognitoUserPool}"
-
   MyLambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
       Action: lambda:InvokeFunction
-      FunctionName: !GetAtt MyLambdaFunction.Arn
-      Principal: "apigateway.amazonaws.com"
-      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${MyHttpApi}/dev/GET/example"
+      FunctionName: !Ref MyLambdaFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${MyApiGateway}/*/*/*"
+  MyCognitoAuthorizer:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      Name: "cognitoAuthorizer"
+      Type: COGNITO_USER_POOLS
+      IdentitySource: method.request.header.Authorization
+      RestApiId: !Ref MyApiGateway
+      ProviderARNs:
+        - !GetAtt [MyCognitoUserPool, Arn]
