--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,5 @@ REACT_APP_USER_POOL_ID=eu-north-1_MrFc1F4Q0
 REACT_APP_USER_POOL_REGION=eu-central-1
 REACT_APP_USER_POOL_CLIENT_ID=7gec29f0hhna8qvu56booall7s
 REACT_APP_AUTH_USER_POOL_WEB_CLIENT_ID=7gec29f0hhna8qvu56booall7s
+REACT_APP_AWS_IAM=640675578675
+REACT_APP_BUCKET=gandolfo-s3-website
