--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Print aws-exports.js contents
+        run: |
+          cat src/aws-exports.js
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1.6.1
         with:
