Add print of aws-exports

--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -31,6 +31,12 @@ jobs:
             fi
           done < .env.dev
 
+      - name: Print environment variables
+        run: |
+          echo "REACT_APP_USER_POOL_ID=$REACT_APP_USER_POOL_ID"
+          echo "REACT_APP_USER_POOL_CLIENT_ID=$REACT_APP_USER_POOL_CLIENT_ID"
+          # ... print other relevant variables
+
       - name: Build
         run: npm run build
 
