--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,4 @@ REACT_APP_USER_POOL_CLIENT_ID=7gec29f0hhna8qvu56booall7s
 REACT_APP_AUTH_USER_POOL_WEB_CLIENT_ID=7gec29f0hhna8qvu56booall7s
 REACT_APP_AWS_IAM=640675578675
 REACT_APP_BUCKET=gandolfo-s3-website
+REACT_APP_CLOUDFRONT_DISTRIBUTION_ID=E3AWVQA01X7TKC
