--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -62,3 +62,9 @@ jobs:
 
       - name: Deploy static site to S3 bucket
         run: aws s3 sync ./build s3://${{ env.REACT_APP_BUCKET }}
+
+      - name: Invalidate CloudFront distribution
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ env.REACT_APP_CLOUDFRONT_DISTRIBUTION_ID }} \
+            --invalidation-batch "{\"Paths\":{\"Items\":[\"/*\"],\"Quantity\":1},\"CallerReference\":\"$(date +%s)\"}"
