--- a/infra/cloudformation.yaml
+++ b/infra/cloudformation.yaml
@@ -174,6 +174,7 @@ Resources:
       FunctionName: !GetAtt MyLambdaFunction.Arn
       Principal: "apigateway.amazonaws.com"
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${MyHttpApi}/dev/GET/example"
+
   GitHubOIDCProvider:
     Type: "AWS::IAM::OIDCProvider"
     Properties:
@@ -182,6 +183,7 @@ Resources:
         - "sts.amazonaws.com"
       ThumbprintList:
         - "a031c46782e6e6c662c2c87c76da9aa62ccabd8e" # Thumbprint for GitHub Actions OIDC
+
   GithubActionsRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -219,4 +221,14 @@ Resources:
               - Effect: "Allow"
                 Action: "cloudfront:CreateInvalidation"
                 Resource: "*" # It's recommended to specify the exact ARN of the distribution if possible
+        - PolicyName: "GithubActionsLambdaAccessPolicy"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: "Allow"
+                Action:
+                  - "lambda:UpdateFunctionCode"
+                  - "lambda:GetFunction" # If needed for the workflow
+                  - "lambda:UpdateFunctionConfiguration" # If you need to update configuration
+                Resource: "arn:aws:lambda:*:*:function:lambdafunction"
       RoleName: "GithubActionsS3Role"
